--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,7 +1,8 @@
 @use '../variables' as v;
+@use '../default';
 
 header {
-    padding: 1rem 0 .5rem;
+    padding: 1rem 0 0.5rem;
     height: 64px;
     border-bottom: 2px solid v.$border-color-light;
 
@@ -18,6 +19,22 @@ header {
 
     .menu-container {
         display: none;
+
+        @media screen and (min-width: 1024px) {
+            display: flex;
+            align-items: center;
+
+            .menu {
+                display: flex;
+                gap: 50px;
+
+                .menu-item {
+                    a {
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
     }
 
     .menu-hamburger {
@@ -25,7 +42,7 @@ header {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: .25rem;
+        gap: 0.25rem;
         height: 32px;
         width: 32px;
         border-radius: 0.375rem;
@@ -38,7 +55,9 @@ header {
             background-color: v.$icon-color-light;
             border-radius: 1px;
         }
+
+        @media screen and (min-width: 1024px) {
+            display: none;
+        }
     }
 }
-
-
