--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -52,7 +52,7 @@ header {
         .bar {
             width: 16px;
             height: 2px;
-            background-color: v.$icon-color-light;
+            background-color: v.$label-gray-color-light;
             border-radius: 1px;
         }
 
