--- a/scss/index.scss
+++ b/scss/index.scss
@@ -58,7 +58,7 @@ main {
                 .repo__infos p,
                 .repo__date {
                     font-size: 12px;
-                    color: #59636e;
+                    color: v.$label-gray-color-light;
                 }
             }
         }
