fix: fixes edit repo style

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -83,7 +83,7 @@ form {
             cursor: pointer;
         }
 
-        #add-button {
+        #green-button {
             background-color: #1f883d;
         }
 
