feat: adds delete button

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -83,8 +83,12 @@ form {
             cursor: pointer;
         }
 
-        #green-button {
+        #submit-button {
             background-color: #1f883d;
+        }
+
+        #delete-button {
+            background-color: #b62324;
         }
 
         .input-container {
