--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,7 +3,7 @@
 
 header {
     padding: 1rem 0 0.5rem;
-    height: 64px;
+    height: 11vh;
     border-bottom: 2px solid v.$border-color-light;
 
     .container {
