style: menu-item font-weight bold

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,6 +6,12 @@
 @use 'components/form';
 @use 'components/footer';
 
+header {
+    .menu-item:nth-child(1) {
+        font-weight: bold;
+    }
+}
+
 main {
     .container {
         max-width: 860px;
@@ -40,6 +46,7 @@ main {
                 min-width: 240px;
                 justify-self: center;
                 justify-content: space-between;
+                min-height: 103px;
 
                 .repo__infos {
                     a {
@@ -56,7 +63,8 @@ main {
                     }
                 }
 
-                .repo__infos h3, p {
+                .repo__infos h3,
+                p {
                     overflow: hidden;
                     text-overflow: ellipsis;
                     white-space: nowrap;
