--- a/scss/register-repo.scss
+++ b/scss/register-repo.scss
@@ -6,6 +6,12 @@
 @use 'components/form';
 @use 'components/footer';
 
+header {
+    .menu-item:nth-child(2) {
+        font-weight: bold;
+    }
+}
+
 main {
     .container {
         max-width: 768px;
