style: fixes header, footer and title margins

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,7 +3,7 @@
 
 header {
     padding: 1rem 0 0.5rem;
-    height: 11vh;
+    height: 64px;
     border-bottom: 1.5px solid v.$border-color-light;
 
     .container {
