--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -2,7 +2,7 @@
 @use '../default';
 
 footer {
-    height: 10vh;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
