--- a/scss/components/_title.scss
+++ b/scss/components/_title.scss
@@ -3,9 +3,9 @@
 
 .title-container {
     width: 100%;
+    margin: 30px 0 25px;
     // max-width: 320px;
     // align-self: center;
-    margin-block: 36px;
 
     h1 {
         font-size: 20px;
