--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -145,7 +145,7 @@ form {
         }
 
         @media screen and (min-width: 768px) {
-            flex-direction: row;
+            flex-direction: row-reverse;
             gap: 32px;
         }
     }
