--- a/scss/components/_menu-dialog.scss
+++ b/scss/components/_menu-dialog.scss
@@ -38,7 +38,7 @@ dialog {
                 cursor: pointer;
 
                 img {
-                    width: 16px;
+                    width: 22px;
                 }
             }
         }
@@ -56,11 +56,16 @@ dialog {
                     font-size: 16px;
 
                     img {
-                        width: 20px;
+                        width: 24px;
+                        height: 24px;
                     }
 
                     span {
                         margin-left: 6px;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
