--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,4 @@
 @use './variables' as v;
-@use './default';
 
 @mixin input-style {
     border-radius: v.$border-radius-sm;
@@ -8,4 +7,10 @@
     &:focus {
         outline: none;
     }
+}
+
+@mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
