--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,11 +1,10 @@
 @use '../variables' as v;
+@use '../mixins' as m;
 @use '../default';
 
 footer {
+    @include m.flex-center();
     height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     color: v.$color-light;
     text-align: center;
     
