--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,4 +1,5 @@
 @use '../variables' as v;
+@use '../mixins' as m;
 @use '../default';
 
 header {
@@ -43,10 +44,8 @@ header {
     }
 
     .menu-hamburger {
-        display: flex;
+        @include m.flex-center();
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         gap: 0.25rem;
         height: 32px;
         width: 32px;
