refactor: replaces px with rem

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,7 +3,7 @@
 @mixin input-style {
     border-radius: v.$border-radius-sm;
     border: 1px solid v.$border-color-light;
-    padding: 6px 10px;
+    padding: 0.375rem 0.675rem;
     &:focus {
         outline: none;
     }
