--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     padding: 0 2rem;
     margin: 0 auto;
-    max-width: 1140px;
+    max-width: 71.25rem;
 }
 
 body {
@@ -24,7 +24,7 @@ body {
 }
 
 main {
-    min-height: 79vh;
+    min-height: 85vh;
 }
 
 a {
