--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,8 @@ $bg-light: #FFFFFF;
 $color-light: #1F2328;
 
 $border-color-light: #D1D9E0;
-$border-radius-sm: 6px;
-$border-radius-md: 10px;
+$border-radius-sm: 0.375rem;
+$border-radius-md: 0.625rem;
 
 $label-gray-color-light: #59636E;
 
