--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,11 +4,11 @@
 
 footer {
     @include m.flex-center();
-    height: 60px;
+    height: 3.75rem;
     color: v.$color-light;
     text-align: center;
-    
+
     p {
-        font-size: 12px;
+        font-size: 0.75rem;
     }
 }
