--- a/scss/components/_image-preview.scss
+++ b/scss/components/_image-preview.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     background-color: #e7e7e7;
     width: 100%;
-    height: 150px;
+    height: 9.375rem;
     border-radius: v.$border-radius-sm;
 
     #image-preview,
