--- a/scss/components/_menu-dialog.scss
+++ b/scss/components/_menu-dialog.scss
@@ -12,7 +12,7 @@ dialog {
     box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1;
     border: none;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     transform: translateX(100vw);
     transition: transform 0.3s ease-in-out;
 
@@ -25,43 +25,43 @@ dialog {
     }
 
     .modal-content {
-        padding: 16px;
-        margin-top: 16px;
+        padding: 1rem;
+        margin-top: 1rem;
 
         .modal-content__header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 8px 8px 0 8px;
+            padding: 0.5rem 0.5rem 0 0.5rem;
 
             .close {
                 cursor: pointer;
 
                 img {
-                    width: 22px;
+                    width: 1.375rem;
                 }
             }
         }
 
         .modal-menu {
             list-style-type: none;
-            padding: 8px;
+            padding: 0.5rem;
 
             li {
-                margin: 16px 0;
+                margin: 1rem 0;
 
                 a {
                     display: flex;
                     text-decoration: none;
-                    font-size: 16px;
+                    font-size: 1rem;
 
                     img {
-                        width: 24px;
-                        height: 24px;
+                        width: 1.5rem;
+                        height: 1.5rem;
                     }
 
                     span {
-                        margin-left: 6px;
+                        margin-left: 0.375rem;
 
                         &:hover {
                             text-decoration: underline;
