--- a/scss/components/_title.scss
+++ b/scss/components/_title.scss
@@ -3,9 +3,9 @@
 
 .title-container {
     width: 100%;
-    margin: 30px 0 25px;
+    margin: 1.875rem 0 1.5rem;
 
     h1 {
-        font-size: 20px;
+        font-size: 1.25rem;
     }
 }
