--- a/scss/index.scss
+++ b/scss/index.scss
@@ -25,83 +25,81 @@ dialog {
 
 main {
     .container {
-        max-width: 860px;
+        justify-content: space-between;
+        max-width: 53.75rem;
+        min-height: inherit;
 
-        .title-container {
-            max-width: 240px;
-            align-self: center;
+        .repos-content {
+            display: flex;
+            flex-direction: column;
 
-            @media screen and (min-width: 580px) {
-                max-width: 516px;
+            .title-container {
+                align-self: center;
             }
 
-            @media screen and (min-width: 855px) {
-                max-width: 790px;
-            }
-        }
+            #repos-container {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, 15rem);
+                row-gap: 2rem;
+                column-gap: 2rem;
+                justify-content: center;
 
-        #repos-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, 240px);
-            row-gap: 36px;
-            column-gap: 36px;
-            justify-content: center;
+                .repo {
+                    border: 1px solid v.$border-color-light;
+                    border-radius: v.$border-radius-md;
+                    padding: 1rem;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.625rem;
+                    min-width: 15rem;
+                    min-height: 6.4rem;
+                    justify-self: center;
+                    justify-content: space-between;
 
-            .repo {
-                border: 1px solid v.$border-color-light;
-                border-radius: v.$border-radius-md;
-                padding: 16px;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                min-width: 240px;
-                justify-self: center;
-                justify-content: space-between;
-                min-height: 103px;
+                    .repo__infos {
+                        a {
+                            h3 {
+                                color: #0969da;
+                                font-size: 0.875rem;
+                                font-weight: v.$font-semibold;
+                                margin-bottom: 0.625rem;
+                            }
 
-                .repo__infos {
-                    a {
-                        h3 {
-                            color: #0969da;
-                            font-size: 14px;
-                            font-weight: v.$font-semibold;
-                            margin-bottom: 9px;
-                        }
-
-                        &:hover {
-                            text-decoration: underline #0969da;
+                            &:hover {
+                                text-decoration: underline #0969da;
+                            }
                         }
                     }
-                }
 
-                .repo__infos h3,
-                p {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    max-width: 200px;
-                }
+                    .repo__infos h3,
+                    p {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        max-width: 8.5rem;
+                    }
 
-                .repo__infos p,
-                .repo__date {
-                    font-size: 12px;
-                    color: v.$label-gray-color-light;
+                    .repo__infos p,
+                    .repo__date {
+                        font-size: 0.75rem;
+                        color: v.$label-gray-color-light;
+                    }
                 }
             }
         }
 
         .pagination {
             @include m.flex-center();
-            gap: 12px;
-            margin-top: 24px;
+            gap: 0.75rem;
+            margin-top: 1.5rem;
 
             span {
-                font-size: 13px;
+                font-size: 0.75rem;
             }
 
             button {
-                width: 20px;
-                height: 20px;
+                width: 1.25rem;
+                height: 1.25rem;
                 border: v.$border-color-light solid 1px;
                 border-radius: 50%;
                 background-color: v.$bg-light;
