--- a/scss/register-repo.scss
+++ b/scss/register-repo.scss
@@ -27,7 +27,7 @@ main {
         max-width: 768px;
 
         .title-container {
-            max-width: 320px;
+            // max-width: 320px;
             align-self: center;
         
             @media screen and (min-width: 768px) {
