--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,7 +2,7 @@
 
 @mixin input-style {
     border-radius: v.$border-radius-sm;
-    border: 1px solid v.$border-color-light;
+    border: v.$border-style;
     padding: 0.375rem 0.675rem;
     &:focus {
         outline: none;
