--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,21 @@
-$bg-light: #FFFFFF;
-$color-light: #1F2328;
+$bg-default-color: #ffffff;
+$bg-red-color: #b62324;
+$bg-green-color: #1f883d;
 
-$border-color-light: #D1D9E0;
+$text-default-color: #1f2328;
+$text-white-color: #ffffff;
+$text-gray-color: #59636e;
+$text-red-color: #d1242f;
+$text-blue-color: #0969da;
+
+$border-style: 1px solid #d1d9e0;
 $border-radius-sm: 0.375rem;
 $border-radius-md: 0.625rem;
 
-$label-gray-color-light: #59636E;
+$font-size-xl: 1.25rem;
+$font-size-lg: 0.875rem;
+$font-size-md: 0.825rem;
+$font-size-sm: 0.75rem;
 
-$font-semibold: 600;
+$font-weight-semi-bold: 600;
+$font-weight-bold: 700;
