--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,7 +5,7 @@
 header {
     padding: 1rem 0 0.5rem;
     height: 4rem;
-    border-bottom: 1.5px solid v.$border-color-light;
+    border-bottom: 1.5px solid #d1d9e0;
 
     .container {
         flex-direction: row;
@@ -30,13 +30,12 @@ header {
                 gap: 50px;
 
                 .menu-item {
-
                     &:hover {
                         text-decoration: underline;
                     }
 
                     a {
-                        font-size: 0.825rem;
+                        font-size: v.$font-size-md;
                     }
                 }
             }
@@ -49,14 +48,14 @@ header {
         gap: 0.25rem;
         height: 2rem;
         width: 2rem;
-        border-radius: 0.375rem;
-        border: 1px solid v.$border-color-light;
+        border-radius: v.$border-radius-sm;
+        border: v.$border-style;
         cursor: pointer;
 
         .bar {
             width: 1rem;
             height: 0.125rem;
-            background-color: v.$label-gray-color-light;
+            background-color: v.$text-gray-color;
             border-radius: 1px;
         }
 
