--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,7 +9,7 @@
 
 header {
     .menu-item:nth-child(1) {
-        font-weight: bold;
+        font-weight: v.$font-weight-bold;
     }
 }
 
@@ -17,7 +17,7 @@ dialog {
     .modal-menu {
         li:nth-child(1) {
             span {
-                font-weight: bold;
+                font-weight: v.$font-weight-bold;
             }
         }
     }
@@ -45,7 +45,7 @@ main {
                 justify-content: center;
 
                 .repo {
-                    border: 1px solid v.$border-color-light;
+                    border: v.$border-style;
                     border-radius: v.$border-radius-md;
                     padding: 1rem;
                     display: flex;
@@ -59,14 +59,14 @@ main {
                     .repo__infos {
                         a {
                             h3 {
-                                color: #0969da;
-                                font-size: 0.875rem;
-                                font-weight: v.$font-semibold;
+                                color: v.$text-blue-color;
+                                font-size: v.$font-size-lg;
+                                font-weight: v.$font-weight-semi-bold;
                                 margin-bottom: 0.625rem;
                             }
 
                             &:hover {
-                                text-decoration: underline #0969da;
+                                text-decoration: underline v.$text-blue-color;
                             }
                         }
                     }
@@ -81,8 +81,8 @@ main {
 
                     .repo__infos p,
                     .repo__date {
-                        font-size: 0.75rem;
-                        color: v.$label-gray-color-light;
+                        font-size: v.$font-size-sm;
+                        color: v.$text-gray-color;
                     }
                 }
             }
@@ -94,19 +94,19 @@ main {
             margin-top: 1.5rem;
 
             span {
-                font-size: 0.75rem;
+                font-size: v.$font-size-sm;
             }
 
             button {
                 width: 1.25rem;
                 height: 1.25rem;
-                border: v.$border-color-light solid 1px;
+                border: v.$border-style;
                 border-radius: 50%;
-                background-color: v.$bg-light;
+                background-color: v.$bg-default-color;
                 cursor: pointer;
 
                 &:disabled {
-                    background-color: #ececec;
+                    background-color: #e7e7e7;
                     color: #7c7c7c;
                     cursor: not-allowed;
                 }
