--- a/scss/components/_image-preview.scss
+++ b/scss/components/_image-preview.scss
@@ -4,7 +4,7 @@
 .file-preview {
     display: flex;
     justify-content: center;
-    background-color: #e7e7e7;
+    background-color: #eee;
     width: 100%;
     height: 9.375rem;
     border-radius: v.$border-radius-sm;
