--- a/scss/index.scss
+++ b/scss/index.scss
@@ -106,9 +106,13 @@ main {
                 cursor: pointer;
 
                 &:disabled {
-                    background-color: #e7e7e7;
+                    background-color: #eee;
                     color: #7c7c7c;
                     cursor: not-allowed;
+                }
+
+                &:not(:disabled):hover {
+                    background-color: v.$bg-light-gray-color;
                 }
             }
         }
