fix: minor fixes

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -35,7 +35,7 @@ header {
                     }
 
                     a {
-                        font-size: v.$font-size-md;
+                        font-size: v.$font-size-lg;
                     }
                 }
             }
